# router

./: Cargo.toml  package-lock.json
.changeset/: cb_public_url_vrl.md  feature_semantic_introspection.md
.github/workflows/: ci.yaml  release.yaml
audits/: package.json
bench/: schema.graphql  supergraph.graphql
bench/monolith-js/: resolvers.js  schema.js
bench/subgraphs/: accounts.rs  lib.rs  reviews.rs
docs/: README.md
docs/ai/: query-plan-debugging.md
docs/design/semantic-introspection/: main.md  phase-2-plugin-customization.md
e2e/: supergraph.graphql
e2e/src/: header_propagation.rs  http_callback.rs  introspection.rs  lib.rs  subscriptions.rs  traffic_shaping.rs
e2e/src/demand_control/: extensions.rs
e2e/src/issues/: mod.rs  supergraph.1110.graphql  supergraph.entity-list-propagation.graphql  supergraph.error-and-null-propagation.graphql  supergraph.non-null-root-field.graphql
e2e/src/testkit/: mod.rs
lib/executor/: CHANGELOG.md  Cargo.toml
lib/executor/benches/: executor_benches.rs
lib/executor/src/execution/: error.rs  plan.rs
lib/executor/src/executors/: error.rs  http.rs  map.rs  mod.rs  multipart_subscribe.rs  subscription_buffer.rs  websocket.rs
lib/executor/src/headers/: mod.rs  plan.rs  response.rs  sanitizer.rs
lib/executor/src/introspection/: mod.rs  resolve.rs  schema.rs
lib/executor/src/introspection/semantic/: bm25.rs  mod.rs  paths.rs  tokenize.rs
lib/executor/src/plugins/: plugin_trait.rs
lib/executor/src/plugins/hooks/: on_execute.rs  on_supergraph_load.rs
lib/executor/src/projection/: plan.rs  response.rs
lib/executor/src/response/: subgraph_response.rs
lib/hive-console-sdk/src/agent/: utils.rs
lib/internal/: CHANGELOG.md  Cargo.toml
lib/internal/src/telemetry/traces/spans/: http_request.rs
lib/node-addon/: CHANGELOG.md  Cargo.toml  package.json
lib/node-addon/src/: lib.rs
lib/query-planner/: CHANGELOG.md  Cargo.toml
lib/query-planner/benches/: qp_benches.rs
lib/query-planner/fixture/issues/: infinite-typename-interfaceobject.graphql
lib/query-planner/fixture/tests/: partial-union-complex.supergraph.graphql  partial-union.supergraph.graphql
lib/query-planner/src/consumer_schema/: introspection_schema.graphql
lib/query-planner/src/graph/: mod.rs  node.rs
lib/query-planner/src/planner/: best.rs  mod.rs
lib/query-planner/src/planner/fetch/: fetch_graph.rs
lib/query-planner/src/planner/fetch/optimize/: fold_concrete_selections_to_interfaces.rs  mod.rs
lib/query-planner/src/planner/walker/: best_path.rs  excluded.rs  mod.rs  path.rs  pathfinder.rs
lib/query-planner/src/tests/: alias.rs  arguments.rs  fragments.rs  include_skip.rs  interface.rs  interface_object.rs  interface_object_with_requires.rs  issues.rs  mod.rs  mutations.rs  object_entities.rs  override_requires.rs  overrides.rs  provides.rs  requires.rs  requires_circular.rs  requires_fragments.rs  requires_provides.rs  requires_requires.rs  root_types.rs  testkit.rs  union.rs
lib/router-config/: CHANGELOG.md  Cargo.toml
lib/router-config/src/: env_overrides.rs  lib.rs  query_planner.rs  semantic_introspection.rs  subscriptions.rs
plugin_examples/feature_flags/src/: test.rs
