[package]
edition = "2021"
version = "0.0.34"
name = "node-addon"
publish = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hive-router-query-planner = { path = "../query-planner", version = "2.0.0" }
graphql-tools = { path = "../graphql-tools", version = "0.5.2" }
napi = { version = "3.9.0", features = ["async", "serde-json"] }
napi-derive = "3.5.6"
thiserror = { workspace = true }

[build-dependencies]
napi-build = "2"

# TODO: profiles need to specified at root Cargo.toml, does it make a difference? I see lto is true there too
# [profile.release]
# lto = true
# strip = "symbols"
