[package]
name = "hive-router-query-planner"
version = "2.10.1"
edition = "2021"
description = "GraphQL query planner for Federation specification"
license = "MIT"
publish = true
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[lib]

[dependencies]
graphql-tools =  { path = "../graphql-tools", version = "0.5.5" }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
xxhash-rust = { workspace = true }

petgraph = "0.8.2"
bitflags = "2.12.1"
lazy-init = "0.5.1"
rustc-hash = "2.1.1"

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
lazy_static = { workspace = true }

[[bench]]
name = "qp_benches"
harness = false
