[package]
name = "hive-router-config"
version = "0.1.4"
edition = "2021"
publish = true
license = "MIT"
description = "This is an internal crate used for managing the Hive Router configuration"
repository = "https://github.com/graphql-hive/router"
homepage = "https://github.com/graphql-hive/router"
authors = ["The Guild"]

[[bin]]
name = "config_schema_generator"
path = "src/config_schema_generator.rs"

[lib]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
http-serde = { workspace = true }
tonic = { workspace = true }
jsonwebtoken = { workspace = true }
retry-policies = { workspace = true}
tracing = { workspace = true }
regex-automata = { workspace = true }
ipnet = { workspace = true }
once_cell = "1.21.3"

schemars = { version = "1.0.4", features = ["url2"] }
url = { version = "2.5.8", features = ["serde"] }
humantime-serde = "1.1.1"
humantime = { workspace = true }
human-size = { version = "0.4.3" ,features = ["serde"] }
config = { version = "0.15.23", features = ["yaml", "json", "json5"] }
envconfig = "0.11.0"
